welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
}
var biscuits=0
var caseOrange=0
while(2*biscuits!=caseOrange+1){
	avance()
	if(estSurBisctuit){
		biscuits=biscuits+1
	}
	if(estSurOrange){
		caseOrange=caseOrange+1
	}
}
